Senior_Project/src/senior/project/test/server/errors/ServerBadRetrievalException.java
package senior.project.test.server.errors;

/**
 *
 * @author Paul Jones
 */
public class ServerBadRetrievalException extends Exception {

  public ServerBadRetrievalException(String msg) {
    super(msg);
  }
}
